<resources>
    <string name="app_name">Object Tracker</string>
    <string name="start_tracking">Start Tracking</string>
    <string name="preferences">Preferences</string>
    <string name="view_recordings">View Recordings</string>
    <string name="debug_text">Debug mode allows you to debug sensors used within this application. Specify the sensor you wish to debug,
        the polling rate of the sensor, and the number of times you wish to poll the sensor. Readings will then be exported into a yml file.</string>
    <string name="timestamp">0:00:00</string>
    <string name="set_color">Color</string>
    <string name="mode">Mode</string>
    <string name="help">Help</string>
    <string name="match_method">Method</string>
    <string name="cancel_initialization">Cancel Initialization</string>
    <string name="manual_mode">Mode: Manual</string>
    <string name="automatic_mode">Mode: Automatic</string>
    <string name="flash_state_off">Off</string>
    <string name="flash_state_on">On</string>
    <string name="freeze_enabled">Frozen</string>
    <string name="freeze_disabled">Live</string>
    <string name="ccoeff_normed">CCOEFF Normed</string>
    <string name="ccoef">CCOEF</string>
    <string name="ccorr_normed">CCORR Normed</string>
    <string name="ccorr">CCORR</string>
    <string name="square_diff_normed">SQDIFF Normed</string>
    <string name="square_difference">SQDIFF</string>
    <string name="manual_tracking">Manual Tracking</string>
    <string name="automatic_tracking">Automatic Tracking</string>
    <string name="help_dialog_manual_tracking">Manual Tracking</string>
    <string name="help_dialog_automatic_tracking">Automatic Tracking</string>
    <string name="help_dialog_matching_methods">Matching Methods</string>
    <string name="help_dialog_tips_and_tricks">Tips and Tricks</string>
    <string name="help_dialog_manual_tracking_desc">
        Manual tracking is the simplest type of tracking mode this app offers. Simply select the
        "Manual Tracking" option by clicking on the <i>MODE</i> button. After pressing the record button, you
        can then click on the object that you wish to track, every 3-5 seconds.
        \n\nUpon each click, the coordinates of the touch will be appended to a .yml data file, along with the time and
        frame number of the touch. A circle will be overlayed on the touch location*. Along with the recording file,
        the data file allows for offline tracking using your favourite external tools.
    </string>
    <string name="help_dialog_automatic_tracking_desc">
        Automatic tracking uses a more advanced technique called "template matching". When selecting
        this method, the user will be presented with an option to select a template of the image
        that they wish to track. The user can also select a matching method (the default being CCOEFF Normalized). This
        is explained in the"Matching Methods" selection below.
        \n\n
        Upon selecting the template and pressing record, template matching
        uses a method that searches the entire image frame for the template specified by the user.
        Upon finding a closest match, a bounding box will be drawn around the location of the detected
        object*.
        \n\n<b>To select a template for template matching</b>:
        \n\n1) Click the <i>MODE</i> button and select <i>Automatic Tracking</i> (Manual Tracking is default, unless specified in preferences).
        \n\t\t1.1) Optionally, select a different matching method by clicking on the "Method" button. Each match methods have their own benefits, explained below.
        \n 2) Press the record button to initialise template selection.
        \n 3) Ensure that the object you wish to track is clearly displayed on screen (with no blur).
        \n 4) Press the <i>Live</i> button to freeze the camera preview. This allows you to select the template
        with ease, as the object will not move.
        \n\t\t4.1) If the frozen image appears blurry, you can press the "CANCEL INITIALIZATION" button found on the
        top edge of the screen, and redo steps 2-4.
        \n 5) Once the camera preview is frozen, hold your finger and drag a box around the object you wish to track.
        \n 6) Once you are happy with the selection process, press the <i>Freeze</i> button to restart the camera preview.
        \n 7) Upon pressing the freeze button, the template will be saved, and automatic tracking will start.

        \n\n<b>Updating the template:</b>
        \n\nTo update the template, simply click on the location of the new template. The location
        that you click on will act as the center point of the new template. Note that the new template
        will be of identical size to the initial template you selected.
        \n\nIf the newly selected template is not within range of the screen size, then a notification will
        appear, notifying the user that manual template correction has failed. It is advised to keep the object
        you wish to track in the center of the screen, for optimal results.


        \n\n<b>Cancelling the initialization:</b>
        \n\nThere may be times where you need to cancel the template initialisation process. For example,
        if you pressed the "Freeze" button and the resultant frame is blurry, you should cancel the initialization and
        start again.
        \n\nTo cancel the initialization, once the process has started, a "CANCEL INITIALIZATION" button
        will appear on the top edge of the screen. If you press this, the preview will unfreeze, and
        you will be given the opportunity to reinitialize the whole process, or switch modes.


        \n\n\n*You can change the circle overlay color by tapping the icon labelled \"Color\". Note that
        due to limitations of OpenCV4Android, the alpha value can only be changed for manual tracking, and is
        thus disabled for automatic tracking.
    </string>
    <string name="help_dialog_matching_methods_desc">
        This application allows for 6 different template matching methods when using automatic tracking.
        Each method has its own benefits, including speed vs accuracy tradeoffs.\n\n

        <b>CCOEFF</b>
        \nCalculated the correlation coeffecient between the pixel values in the template and the pixel
        values in the source image. This value is not normalized.\n\n

        <b>CCOEFF Normed</b>
        \nCalculated the correlation coeffecient between the pixel values in the template and the pixel
        values in the source image. This value is normalized to return a value between 0 and 1.
        \nThis matching method is default, as it has been proven to be the most accurate, however
        it is the slowest, due to the amount of computation required.\n\n

        <b>CCORR</b>
        \nCalculates the cross-correlation between the pixel values in the template and the pixel
        values in the source image. This value is not normalized.\n\n

        <b>CCORR Normed</b>
        \nCalculates the cross-correlation between the pixel values in the template and the pixel
        values in the source image. This value is normalized to return a value between 0 and 1.\n\n

        <b>SQDIFF</b>
        \nCalculates the difference of two squares when determining the heuristic.
        This matching method involves the least computation, and as a result, is the fastest.\n\n

        <b>SQDIFF Normed</b>
        \nCalculates the difference of two squares when determining the heuristic. The value
        is normalized to a standard range.\n\n\n\n

    </string>
    <string name="help_dialog_tips_and_tricks_desc">
        There are various hardware parameters that determine how well this application will run on
        your phone. Newer phones benefit from more powerful cameras and CPUs, meaning that the recorded
        video is more crisp, and automatic tracking is faster to process. However, if you have an older
        device, you can still benefit from this app.

        \n\n<b>Increasing Performance</b>
        \n1) Exit from other applications so that your phone has more free RAM.
        \n2) Make use of your cameras autofocus before selecting a template for template matching
        \n3) Make use of the zoom feature to track smaller objects


        \n\n<b>General Tips</b>
        \n1) This application is optimised to record in landscape mode, so it is recommended that the user
        record in landscape whenever possible.
        \n2) During automatic tracking, it is advised that the phone be kept at the same height during the entire
        recording. Template matching is not scale-invariant, and changing the height of phone during recording
        can lead to the objects scale changing.
        \n3)&#8320;

        \n\n<b>Potential Problems</b>
        \n1) If the accelerometer and gyroscope values only report 0 in the YML file, this is suggestive that
        your phone does not support an accelerometer or gyroscope sensor.
        \n2) If the template is not found in a large majority of frames during automatic tracking, it is recommended to restart
        the tracking, with a larger template (by using the zoom feature). This will however decrease the FPS during recording.
        \n3) If recording does not start, ensure that your camera is not being "locked" by another application - restarting
        your phone should fix this issue.
        \n4) Ensure you have sufficient storage before recording (500MB+). The amount of available storage space is reported
        in the top right corner during recording, and the recording will stop if storage is not sufficient.

    </string>
    <string name="title_activity_settings">Settings</string>
    <string name="general_settings_title">General Settings</string>
    <string name="automatic_tracking_settings_title">Automatic Tracking Settings</string>
    <string name="manual_tracking_settings_title">Manual Tracking Settings</string>
    <string name="pref_tracking_mode_title">Tracking Mode</string>
    <string name="pref_tracking_mode_summary">Set the default object tracking mode of this application.</string>
    <string name="pref_screen_brightness_title">Turn screen brightness to max</string>
    <string name="pref_screen_brightness_summary">Select whether or not the screen brightness should be maximised
        whilst camera is open. This leads to better viewing, but poorer battery life. If this is disabled, you
        can manually control brightness.</string>
    <string name="pref_tutorial_summary">Select whether or not to show the user-interface tutorial next
        time the "Start Tracking" screen is started. This will automatically be set to false each time the tutorial is finished.</string>
    <string name="pref_tutorial_title">Show tutorial on next startup</string>
    <string name="pref_matching_method_title">Matching Method</string>
    <string name="pref_matching_method_summary">Set the default template matching method to be used in automatic tracking.</string>
    <string name="pref_record_overlay_title">Record overlay</string>
    <string name="pref_record_overlay_summary">Choose whether or not the rectangle overlay in automatic tracking is embedded into the recording.</string>
    <string name="pref_update_template_title">Update template</string>
    <string name="pref_update_template_summary">Select whether or not the template used for template matching should be updated on each frame.</string>
    <string name="email_about">Contact ftahir192@gmail.com for support</string>
    <string name="developed_by_about">Developed by Faizan Tahir</string>
    <string name="object_tracker_about">Object Tracker</string>
    <string name="open_source_about">Object Tracker is built using various open-source software.</string>
</resources>