<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">


    <group
        android:checkableBehavior="single"
        android:id="@+id/evaluation_mode">

        <item
            android:id="@+id/sqdiff"
            android:title="@string/square_difference"/>

        <item
            android:id="@+id/sqdiff_normed"
            android:title="@string/square_diff_normed" />

        <item
            android:id="@+id/ccorr"
            android:title="@string/ccorr"/>

        <item
            android:id="@+id/ccorr_normed"
            android:title="@string/ccorr_normed" />

        <item
            android:id="@+id/ccoeff"
            android:title="@string/ccoef"/>

        <item
            android:id="@+id/ccoef_normed"
            android:title="@string/ccoeff_normed" />

    </group>

</menu>
