<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:background="@drawable/gradient_background">

        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_manual_tracking"/>

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_manual_tracking_desc"/>

        <TextView
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_automatic_tracking"/>

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_automatic_tracking_desc"/>

        <TextView
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_matching_methods"/>

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_matching_methods_desc"/>

        <TextView
            android:layout_marginTop="16dp"
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_tips_and_tricks"/>

        <TextView
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/help_dialog_tips_and_tricks_desc"/>



    </LinearLayout>
</ScrollView>